--- a/index.html
+++ b/index.html
@@ -2,85 +2,85 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width", user-scalable=no>
-    <title>ejercicio header sass</title>
-    <link rel="stylesheet" href="css/index.scss">
-    <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,400i,700i" rel="stylesheet">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width" , user-scalable=no>
+  <title>ejercicio header sass</title>
+  <link rel="stylesheet" href="css/index.css">
+  <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,400i,700i" rel="stylesheet">
 
 </head>
 
 <body>
-    <header>
-        <h1><a href="#">
+  <header>
+    <h1><a href="#">
           <img src="images/iconSeta.png" class="seta" alt="icono seta">
           </a>
         </h1>
-        <h2>Header Sussu Pettalos</h2>
-        <div class="headerContent">
-            <button class="btnOpenMenu" type="button" name="openMenu">
+    <h2>Header Sussu Pettalos</h2>
+    <div class="headerContent">
+      <button class="btnOpenMenu" type="button" name="openMenu">
       <img class="imgMenu" src="images/iconMenu.png" alt="botonMenu">
       </button>
 
 
       <ul class="menuComputer">
-          <li>
-              <a href="#">
+        <li>
+          <a href="#">
                   <img src="images/iconMesages.png " alt="message ">
                   <span>Messages</span>
               </a>
-          </li>
-          <li>
-              <a href="# ">
+        </li>
+        <li>
+          <a href="# ">
                   <img src="images/iconFavourites.png " alt="star ">
                   <span>Favourites</span>
               </a>
-          </li>
-          <li>
-              <a href="# ">
+        </li>
+        <li>
+          <a href="# ">
                   <img src="images/iconAlerts.png " alt="bell ">
                   <span>Alerts</span>
               </a>
-          </li>
-          <li>
-              <a href="# ">
+        </li>
+        <li>
+          <a href="# ">
                   <img src="images/iconComents.png " alt="Comment ">
                   <span>Comments</span>
               </a>
-          </li>
+        </li>
       </ul>
-      </header>
-      <ul id="myMenuMobile" class ="bounceInDown hidden">
-      <li >
-          <a href="# ">
+  </header>
+  <ul id="myMenuMobile" class="bounceInDown hidden">
+    <li>
+      <a href="# ">
               <img src="images/iconMesages.png " alt="message ">
               <span>Messages</span>
           </a>
-      </li>
-      <li>
-          <a href="# ">
+    </li>
+    <li>
+      <a href="# ">
               <img src="images/iconFavourites.png " alt="star ">
               <span>Favourites</span>
           </a>
-      </li>
-      <li>
-          <a href="# ">
+    </li>
+    <li>
+      <a href="# ">
               <img src="images/iconAlerts.png " alt="bell ">
               <span>Alerts</span>
           </a>
-      </li>
-      <li>
-          <a href="# ">
+    </li>
+    <li>
+      <a href="# ">
               <img src="images/iconComents.png " alt="Comment ">
               <span>Comments</span>
           </a>
-      </li>
+    </li>
   </ul>
   </div>
 
 
 
-<script src="js/main.js " charset="utf-8 "></script>
+  <script src="js/main.js " charset="utf-8 "></script>
 </body>
 
 </html>
