--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <h2>Header Sussu Pettalos</h2>
     <div class="headerContent">
       <button class="btnOpenMenu" type="button" name="openMenu">
-      <img class="imgMenu" src="images/iconMenu.png" alt="botonMenu">
+      <img class="hamburger" src="images/iconMenu.png" alt="botonMenu">
       </button>
 
 
@@ -50,7 +50,7 @@
         </li>
       </ul>
   </header>
-  <ul id="myMenuMobile" class="bounceInDown hidden">
+  <ul class="bounceInDown hidden menu-mobile">
     <li>
       <a href="# ">
               <img src="images/iconMesages.png " alt="message ">
